--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>WDDCA2</title>
+  <title>WDDCA2X00125983</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,15 +15,25 @@
   
   <app-root>Loading...</app-root>
   <script>
-function convert(degree) {
+ // var count = 0;
+  //var select = $(this).attr('id');
+
+    //function checkId(id){
+	   // select = id;
+   // }
+
+function convert(id) {
     var x;
-    if (degree == "C") {
+    id = select;
+    if (id == "C") {
         x = document.getElementById("c").value * 9 / 5 + 32;
         document.getElementById("f").value = Math.round(x);
     } else {
         x = (document.getElementById("f").value -32) * 5 / 9;
         document.getElementById("c").value = Math.round(x);
     }
+    count++;
+    document.getElementById("count").innerHTML = count;
 }
 </script>
 </body>
